--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,23 @@
 Documentation:
   Enabled: false
+
 Metrics/LineLength:
     Enabled: false
+
+Metrics/AbcSize:
+  Enabled: false
+
+Metrics/BlockLength:
+  Enabled: false
+
+Metrics/ClassLength:
+  Enabled: false
+
+Metrics/CyclomaticComplexity:
+  Enabled: false
+
+Metrics/ModuleLength:
+  Enabled: false
+
+Metrics/PerceivedComplexity:
+  Enabled: false
